# amharicNLP

./: .gitignore  MANIFEST.in  README.md  bash.exe.stackdump  cli.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
amharicNLP/: __init__.py
amharicNLP/example/: __init__.py  test.py
amharicNLP/resources/: __init__.py  amharic_stopwords.txt  chars_to_normaliz.txt  cleaner.py  lemmatizer.py  normalizer.py  preprocess.py  short_forms.txt  stemmer.py  stopwrod.py  titles.txt  tokenizer.py  utils.py
amharicNLP/resources/data/: ner_dataset.xls  pos_dataset.xls
amharicNLP/resources/datasets/: ner_dataset.xls  pos_dataset.xls
amharicNLP/resources/tests/: conftest.py  test_cleaner.py  test_normalizer.py  test_utils.py
amharicNLP/utilities/: __init__.py  data_augmenter.py
amharicNLP/wordnet/: __init__.py  amh_wordnet.json  loader.py
